<resources>
    <string name="app_name">Peda</string>
    <string name="logo">Logo</string>
    <string name="email">E-mail cím</string>
    <string name="password">Jelszó</string>
    <string name="passwordAgain">Jelszó újra</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="belepes">Belépés</string>
    <string name="login1">Login</string>
    <string name="showpassword">Show Password</string>
    <string name="welcome">Üdvözlünk!</string>
    <string name="studentlogo">Studentlogo</string>
    <string name="tests">Tesztek</string>
    <string name="logout">Kilépés</string>
    <string name="studentsText">Válassz tesztet:</string>
    <string-array name="testLists">
        <item>Válassz</item>
        <item>Teszt 1</item>
        <item>Teszt 2</item>
        <item>Teszt 3</item>
        <item>Teszt 4</item>
    </string-array>
    <string name="nameRegister">Név</string>
    <string name="teacher">Tanár</string>
    <string name="student">Diák</string>
    <string name="teacherTests">Tesztek</string>
    <string name="teacherCreateTest">Teszt létrehozása</string>
    <string name="teacherResult">Eredmények</string>
    <string name="testCreate">Teszt létrehozás</string>
    <string name="testCreateGroup">Csoportnév</string>
    <string name="testCreateQuestion">Kérdés</string>
    <string name="testCreateAnswers1">Válasz 1 </string>
    <string name="testCreateAnswers2">Válasz 2 </string>
    <string name="testCreateAnswers3">Válasz 3 </string>
    <string name="testCreateAnswers4">Válasz 4 </string>
    <string name="testCreateAnswersCorrect">Helyes válasz</string>
    <string name="testCreateAddQuestion">Hozzáadás</string>
    <string name="testFill">Teszt kitöltése</string>
    <string name="submit">Submit</string>
    <string name="test">Tesztek listája</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
