<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/ButtonLogout"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="181dp"
        android:background="@drawable/roundedbutton"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/logout"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonResults"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="175dp"
        android:layout_height="72dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewStudent"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/studentlogo"
        android:src="@drawable/student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/ButtonResults"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="206dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/results"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerStudent" />

    <TextView
        android:id="@+id/textViewStudentsText"
        android:layout_width="177dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="206dp"
        android:text="@string/studentsText"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />

    <Spinner
        android:id="@+id/SpinnerStudent"
        android:layout_width="177dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="206dp"
        android:layout_marginBottom="82dp"

        android:dropDownSelector="@drawable/background"
        android:text="@string/studentsText"
        app:layout_constraintBottom_toTopOf="@+id/ButtonResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />

</androidx.constraintlayout.widget.ConstraintLayout>